--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   <body>
     <div class="container">
       <div>
+        <input id="user" class="input" placeholder="Put your name" />
+        <input id="message" class="input" placeholder="Put your message" />
+        <button onclick="add()" class="button">Add Tweet</button> 
+      </div>
+      <div>
         <button onclick="refresh()" class="button">Refresh</button>
       </div>
       <div id="tweets"></div>
